--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,7 +71,7 @@
         app:layout_constraintVertical_bias="0.619" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/etContra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
