--- a/app/src/main/res/layout/activity_registro_usuario.xml
+++ b/app/src/main/res/layout/activity_registro_usuario.xml
@@ -136,4 +136,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.758" />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="17dp"
+        android:layout_height="21dp"
+        android:text="ó"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.894" />
 </androidx.constraintlayout.widget.ConstraintLayout>
