--- a/app/src/main/res/layout/activity_usuarios.xml
+++ b/app/src/main/res/layout/activity_usuarios.xml
@@ -55,29 +55,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.959" />
 
-    <SearchView
-        android:id="@+id/search"
-        android:layout_width="388dp"
-        android:layout_height="43dp"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerViewVendedores"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView26" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewVendedores"
-        android:layout_width="393dp"
-        android:layout_height="325dp"
+        android:layout_width="385dp"
+        android:layout_height="394dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView26"
+        app:layout_constraintTop_toBottomOf="@+id/txtBuscarV"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.774" />
 
     <TextView
-        android:id="@+id/textView26"
+        android:id="@+id/txtBuscarV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Buscar por Vendedor:"
